Added the rest of the files

--- a/web/src/main/resources/templates/home.html
+++ b/web/src/main/resources/templates/home.html
@@ -1,11 +1,20 @@
+
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<html lang="en">
+<head id="headId">
     <meta charset="UTF-8">
-    <title>Guess The Number Game</title>
+    <title>Title content</title>
 </head>
 <body>
-    <h1>Welcome to the number game</h1>
-    <a href="http://google.com">Click To Play</a>
+<div align="center">
+    <h1 id="welcome">Welcome to Guess the Number Game</h1>
+    <h3>
+        <a id="play-game"
+           href="play.html">
+            Click to Play
+        </a>
+    </h3>
+    <div id="footerId">Footer goes here</div>
+</div>
 </body>
 </html>
